# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/user_auth/userauth.gni")

ohos_shared_library("userauthservice") {
  cflags_cc = []
  sources = [
    "src/thread_groups.cpp",
    "src/userauth_adapter.cpp",
    "src/userauth_async_proxy.cpp",
    "src/userauth_controller.cpp",
    "src/userauth_datamgr.cpp",
    "src/userauth_excallback_impl.cpp",
    "src/userauth_service.cpp",
    "src/userauth_stub.cpp",
  ]

  include_dirs = [
    "inc",
    "//base/user_iam/user_auth/common/logs/user_auth/inc",
    "//base/user_iam/user_auth/frameworks/user_auth/inc",
    "//base/user_iam/user_auth/services/co_auth/common/interface",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]

  deps = [
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//base/user_iam/user_auth/frameworks/co_auth:coauth_framework",
    "//base/user_iam/user_auth/frameworks/user_auth:userauth_framework",
    "//base/user_iam/user_auth/services/co_auth/common:useriam_common_lib",
    "//base/user_iam/user_idm/interfaces/innerkits:useridm_framework",
    "//third_party/openssl:libcrypto_static",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  if (has_os_account_part) {
    cflags_cc += [ "-DHAS_OS_ACCOUNT_PART" ]
    external_deps += [ "os_account_standard:os_account_innerkits" ]
  }

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  part_name = "${userauth_native_part_name}"
}
