# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("useridm_public_config") {
  include_dirs = [ "inc" ]
}

ohos_shared_library("useridmservice") {
  include_dirs = [
    "//base/user_iam/user_auth/common/logs/user_idm",
    "//base/user_iam/user_auth/services/user_idm/inc",
    "//base/user_iam/user_auth/frameworks/user_idm/inc",
    "//base/user_iam/user_auth/interfaces/inner_api/user_idm",
    "//base/user_iam/user_auth/services/co_auth/common/interface",
  ]

  sources = [
    "src/useridm_adapter.cpp",
    "src/useridm_callback_proxy.cpp",
    "src/useridm_coauth_handler.cpp",
    "src/useridm_controller.cpp",
    "src/useridm_getinfo_callback_proxy.cpp",
    "src/useridm_getsecinfo_callback_proxy.cpp",
    "src/useridm_module.cpp",
    "src/useridm_service.cpp",
    "src/useridm_setprop_handler.cpp",
    "src/useridm_stub.cpp",
  ]

  public_configs = [ ":useridm_public_config" ]

  deps = [
    "//base/user_iam/user_auth/frameworks/co_auth:coauth_framework",
    "//base/user_iam/user_auth/frameworks/user_idm:useridm_framework",
    "//base/user_iam/user_auth/services/co_auth/common:useriam_common_lib",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  part_name = "user_auth"
}
