# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/user_iam/user_auth/userauth.gni")
import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "${userauth_native_part_name}/UserAuth_test"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "include" ]
}

##############################unittest##########################################
ohos_unittest("unittest_test") {
  module_out_path = module_output_path

  sources = [ "src/userauth_test.cpp" ]

  include_dirs = [
    "include",
    "//base/user_iam/user_auth/interfaces/innerkits/include",
    "//base/user_iam/user_auth/interfaces/inner_api/include/common",
    "//base/user_iam/user_auth/interfaces/inner_api/include/userauth",
    "//base/user_iam/user_auth/interfaces/inner_api/include/useridm",
    "//base/user_iam/user_auth/interfaces/inner_api/include/authrespool",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${userauth_innerkits_path}/native:userauth_framework",
    "//utils/native/base:utils",
  ]

  external_deps = [ "ipc:ipc_core" ]
}
