# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("cj_userauth_ffi") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  include_dirs = [
    "inc",
    "../../native/client/inc",
    "../../native/ipc/common_defines",
    "../../../interfaces/inner_api",
  ]

  sources = [
    "src/user_auth_callback_cj.cpp",
    "src/user_auth_ffi.cpp",
  ]

  deps = [ "../../native/client:userauth_client" ]

  external_deps = [ "napi:cj_bind_native" ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
