# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("userauth_client") {
  include_dirs = [
    "//base/useriam/user_auth_framework/services/common_defines/interfaces",
    "//base/useriam/user_auth_framework/services/common_defines/types",
    "//base/useriam/user_auth_framework/services/core/inc",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
    "inc",
  ]

  sources = [
    "src/co_auth_client_impl.cpp",
    "src/ipc_client_utils.cpp",
    "src/user_auth_client_impl.cpp",
    "src/user_idm_client_impl.cpp",
  ]

  configs = [
    "//base/useriam/user_auth_framework/common:iam_log_config",
    "//base/useriam/user_auth_framework/frameworks/native/ipc:userauth_client_ipc_config",
  ]

  deps = [
    "//base/useriam/user_auth_framework/frameworks/native/common:attributes",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]
}
