# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_client_config") {
  include_dirs = [
    "inc",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]
}

ohos_shared_library("userauth_client") {
  include_dirs = [
    "inc",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]

  sources = [
    "src/auth_message_impl.cpp",
    "src/co_auth_client_impl.cpp",
    "src/executor_callback_service.cpp",
    "src/executor_messenger_client.cpp",
    "src/ipc_client_utils.cpp",
    "src/user_auth_callback_service.cpp",
    "src/user_auth_client_impl.cpp",
    "src/user_idm_callback_service.cpp",
    "src/user_idm_client_impl.cpp",
  ]

  configs = [
    "//base/useriam/user_auth_framework/common:iam_log_config",
    "//base/useriam/user_auth_framework/frameworks/native/ipc:userauth_client_ipc_config",
  ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  public_configs = [ ":userauth_client_config" ]

  deps = [
    "//base/useriam/user_auth_framework/common:iam_utils",
    "//base/useriam/user_auth_framework/frameworks/native/common:attributes",
    "//base/useriam/user_auth_framework/frameworks/native/common:dfx",
    "//base/useriam/user_auth_framework/frameworks/native/ipc:userauth_client_ipc",
  ]

  if (use_musl) {
    version_script = "user_auth_client_map"
  }

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "user_auth_framework"
}
