# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("attributes_config") {
  include_dirs = [ "../../../interfaces/inner_api" ]
}

ohos_source_set("attributes") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [ "../../../interfaces/inner_api" ]

  sources = [ "attributes/src/attributes.cpp" ]

  configs = [ "../../../common:iam_log_config" ]

  public_configs = [ ":attributes_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}

config("dfx_config") {
  include_dirs = [ "dfx/inc" ]
}

ohos_source_set("dfx") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "../../../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"
  include_dirs = [ "dfx/inc" ]

  sources = [
    "dfx/src/hisysevent_adapter.cpp",
    "dfx/src/iam_hitrace_helper.cpp",
  ]

  configs = [ "../../../common:iam_log_config" ]

  public_configs = [ ":dfx_config" ]

  deps = [ "../../../common:iam_utils" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]

  subsystem_name = "useriam"
  part_name = "user_auth_framework"
}
