# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("userauth_client_ipc_config") {
  include_dirs = [
    "inc",
    "common_defines",
  ]
}

ohos_source_set("userauth_client_ipc") {
  include_dirs = [
    "inc",
    "common_defines",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]

  sources = [
    "src/co_auth_proxy.cpp",
    "src/cred_info_impl.cpp",
    "src/executor_callback_stub.cpp",
    "src/executor_messenger_proxy.cpp",
    "src/sec_user_info_impl.cpp",
    "src/user_auth_callback_stub.cpp",
    "src/user_auth_proxy.cpp",
    "src/user_idm_callback_stub.cpp",
    "src/user_idm_proxy.cpp",
  ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]
  public_configs = [ ":userauth_client_ipc_config" ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  deps = [ "//base/useriam/user_auth_framework/common:iam_utils" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}

ohos_source_set("userauth_service_ipc") {
  include_dirs = [
    "inc",
    "common_defines",
    "//base/useriam/user_auth_framework/interfaces/inner_api",
  ]

  sources = [
    "src/co_auth_stub.cpp",
    "src/executor_callback_proxy.cpp",
    "src/executor_messenger_stub.cpp",
    "src/user_auth_callback_proxy.cpp",
    "src/user_auth_stub.cpp",
    "src/user_idm_callback_proxy.cpp",
    "src/user_idm_stub.cpp",
  ]

  configs = [ "//base/useriam/user_auth_framework/common:iam_log_config" ]
  public_configs = [ ":userauth_client_ipc_config" ]
  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  deps = [ "//base/useriam/user_auth_framework/common:iam_utils" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
